--- a/manage-landing-page-master/index.html
+++ b/manage-landing-page-master/index.html
@@ -20,8 +20,7 @@
         <img
           src="./images/icon-hamburger.svg"
           alt="icon-hamburger"
-          id="humburger-icon"
-          onclick="togglemenu()"
+          id="humburger_icon"
         />
         <!-- <img src="./images/icon-close.svg" alt="close-icon" id="close-icon"> -->
       </div>
@@ -35,7 +34,7 @@
         <img
           src="./images/icon-close.svg"
           alt="close-icon"
-          id="close-icon"
+          id="closeIcon"
         />
         <li class="one">Pricing</li>
         <li class="two">Product</li>
