--- a/manage-landing-page-master/index.html
+++ b/manage-landing-page-master/index.html
@@ -12,10 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
-    />
+   <link rel="stylesheet" href="./swiper-bundle.min.css">
   </head>
   <body>
     <header class="header-container">
@@ -227,16 +224,8 @@
         <p>Copyright 2020. All Rights Reserved</p>
       </section>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+    <script src="./swiper-bundle.min.js"></script>
     <script src="./type.js">
-            var swiper = new Swiper(".card_slider", {
-        slidesPerView: 3,
-        spaceBetween: 30,
-        pagination: {
-          el: ".swiper-pagination",
-          clickable: true,
-        },
-      });
     </script>
   </body>
 </html>
