--- a/manage-landing-page-master/index.html
+++ b/manage-landing-page-master/index.html
@@ -143,10 +143,10 @@
 
       <section class="section-container2">
         <h1>What they’ve said</h1>
-        <div class="flex-container slide-container">
+        <div class="flex-container slide-container swiper">
           <div class="slide-content">
-            <div class="card-wrapper">
-              <div class="card">
+            <div class="card-wrapper swiper-wrapper">
+              <div class="card swiper-slide">
                 <div class="image-content">
 
                   <span class="overlay"></span>
@@ -167,8 +167,107 @@
                   </p>
                 </div>
               </div>
+
+
+              <div class="card swiper-slide">
+                <div class="image-content">
+
+                  <span class="overlay"></span>
+
+                  <div class="card-image">
+                    <img
+                      src="./images/avatar-ali.png"
+                      alt="Ali's-image" class="border"
+                    />
+                  </div>
+                </div>
+                <div class="card-content">
+                  <h3 class="name">Ali Bravo</h3>
+                  <p class="description">
+                    “Manage has supercharged our team’s workflow. The ability to maintain 
+                    visibility on larger milestones at all times keeps everyone motivated.”
+                  
+                  </p>
+                </div>
+              </div>
+
+
+              <div class="card swiper-slide">
+                <div class="image-content">
+
+                  <span class="overlay"></span>
+
+                  <div class="card-image">
+                    <img
+                      src="./images/avatar-anisha.png"
+                      alt="Anisha's-image" class="border"
+                    />
+                  </div>
+                </div>
+                <div class="card-content">
+                  <h3 class="name">Anisha Li</h3>
+                  <p class="description">
+                    “We have been able to cancel so many other subscriptions
+                    since using Manage. There is no more cross-channel confusion
+                    and everyone is much more focused.”
+                  </p>
+                </div>
+              </div>
+
+
+
+
+              <div class="card swiper-slide">
+                <div class="image-content">
+
+                  <span class="overlay"></span>
+
+                  <div class="card-image">
+                    <img
+                      src="./images/avatar-anisha.png"
+                      alt="Anisha's-image" class="border"
+                    />
+                  </div>
+                </div>
+                <div class="card-content">
+                  <h3 class="name">Anisha Li</h3>
+                  <p class="description">
+                    “We have been able to cancel so many other subscriptions
+                    since using Manage. There is no more cross-channel confusion
+                    and everyone is much more focused.”
+                  </p>
+                </div>
+              </div>
+
+
+              <div class="card swiper-slide">
+                <div class="image-content">
+
+                  <span class="overlay"></span>
+
+                  <div class="card-image">
+                    <img
+                      src="./images/avatar-anisha.png"
+                      alt="Anisha's-image" class="border"
+                    />
+                  </div>
+                </div>
+                <div class="card-content">
+                  <h3 class="name">Anisha Li</h3>
+                  <p class="description">
+                    “We have been able to cancel so many other subscriptions
+                    since using Manage. There is no more cross-channel confusion
+                    and everyone is much more focused.”
+                  </p>
+                </div>
+              </div>
+
             </div>
           </div>
+
+          <div class="swiper-button-next"></div>
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-pagination"></div>
         </div>
       </section>
 
