--- a/manage-landing-page-master/index.html
+++ b/manage-landing-page-master/index.html
@@ -274,7 +274,7 @@
       <button class="btn-1">Get Started</button>
       <section class="section-container4">
         <h2>
-          Simplify how your team<br />
+          Simplify how your team
           works today.
         </h2>
         <button class="btn-2">Get Started</button>
@@ -285,11 +285,11 @@
       <section class="footer-container1">
         <img src="./images/logo1.svg" alt="logo-image" color="#fff" />
         <figure class="figure-container1">
-          <img src="./images/icon-facebook.svg" alt="facebook" />
-          <img src="./images/icon-youtube.svg" alt="you-tube" />
-          <img src="./images/icon-twitter.svg" alt="twitter" />
-          <img src="./images/icon-pinterest.svg" alt="pinterest" />
-          <img src="./images/icon-instagram.svg" alt="instagram" />
+          <img src="./images/icon-facebook.svg" alt="facebook" id="small" />
+          <img src="./images/icon-youtube.svg" alt="you-tube"  id="small"/>
+          <img src="./images/icon-twitter.svg" alt="twitter" id="small"/>
+          <img src="./images/icon-pinterest.svg" alt="pinterest" id="small"/>
+          <img src="./images/icon-instagram.svg" alt="instagram" id="small"/>
         </figure>
       </section>
       <section class="footer-container2">
