--- a/manage-landing-page-master/index.html
+++ b/manage-landing-page-master/index.html
@@ -134,7 +134,7 @@
             <h3>Richard Watts</h3>
             <p>
               “Manage allows us to provide structure and process. It keeps us
-              organized and focused. I can’t stop recommending them to everyone
+              organized and focused. I can’t stop recommending them tIo everyone
               I talk to!”
             </p>
           </section>
